# photochomper

./: .gitignore  .~lock.duplicates_report_20250803_164014.csv#  2025-09-05-this-session-is-being-continued-from-a-previous-co.txt  2025-09-06-this-session-is-being-continued-from-a-previous-co3.txt  3-sept-944am.txt  CHANGELOG.md  CLAUDE.md  PhotoChomper.spec  README.md  TODO.md  debug_hanging.py  duplicates_report.db  duplicates_report_20250831_073008.db  duplicates_report_20250903_194758.db  duplicates_report_20250905_115647.db  duplicates_report_20250905_151245.db  duplicates_report_20250906_105734.db  duplicates_report_20250909_112453.db  duplicates_summary_20250803_164119.md  duplicates_summary_20250830_125415.md  main.py  photochomper_config.json  photochomper_hash_cache.db  photochomper_list_config_20250804_142527.listconf  photochomper_list_config_20250804_144707.listconf  pyproject.toml  test_fix.py  test_refactor.py  test_v3_optimizations.py
.claude/: 2025-09-05-this-session-is-being-continued-from-a-previous-co.txt  2025-09-05-this-session-is-being-continued-from-a-previous-co2.txt  3-sept-944am.txt  python-simplifier.md  python-test-debugger.md
docs/: pyinstaller.md  requirements.md
scripts/: delete_photos_in_file.sh  list_small_images.py
src/: actions.py  chomper.py  config.py  filetypes.py  lister.py  old_chomper.py  report.py  scanner.py  tui.py  version.py
tests/: TEST_RESULTS.md  debug_hanging.py  filesperdir.sh  filesperdir.txt  integration_demo.py  run_all_version_tests.py  test_actions.py  test_actions_clean.py  test_chunking_system.py  (+11 more)
(+13 files in other folders)
